# quimb

./: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .lgtm.yml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  pyproject.toml  pytest.ini  readthedocs.yml  setup.cfg  setup.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bugreport.yml  config.yml  misc.yml  newfeature.yml
.github/workflows/: pypi-release.yml  tests.yml
ci/azure/: install-slepc4py.yml  install.yml  unit-tests.yml
ci/requirements/: py-base.yml  py-jax.yml  py-openblas.yml  py-slepc.yml  py-tensorflow.yml  py-torch.yml  py310-jax.yml  py310-pytorch.yml  py310-tensorflow.yml  py310-win.yml  py310.yml  py36.yml  py37.yml  py38-jax.yml  py38-pytorch.yml  py38-tensorflow.yml  py38.yml  py39-jax.yml  py39-pytorch.yml  py39-tensorflow.yml  py39-win.yml  py39.yml
docs/: Makefile  api.rst  basics.ipynb  basics.rst  calculating quantities.ipynb  calculating quantities.rst  changelog.md  changelog.rst  conf.py  develop.md  develop.rst  distributed parallelism - mpi.rst  dynamics and evolution.ipynb  dynamics and evolution.rst  ex_2d_antiferro.rst  ex_core.rst  ex_dmrg.rst  ex_dmrg_pbc.rst  ex_quench.rst  ex_tensor_network.rst  generate.md  generate.rst  index.md  index.rst  index_core.rst  index_examples.md  index_examples.rst  index_matrix.md  index_operator.md  index_tn.md  index_tn.rst  installation.md  installation.rst  make.bat  solving systems.ipynb  solving systems.rst  states.rst  tensor algorithms.rst  tensor basics.rst  tensor networks.rst  (+10 more)
docs/_autosummary/: quimb.accel.rst  quimb.calc.rst  quimb.core.rst  quimb.evo.rst  quimb.rst  quimb.solve.rst  quimb.utils.rst
docs/_pygments/: _pygments_dark.py  _pygments_light.py
docs/_static/: docset.css  my-styles.css
docs/examples/: README.md  debug.ipynb  debug.py  ex_2d.ipynb  ex_MERA.ipynb  ex_TEBD_evo.ipynb  ex_circuit_to_mpo.ipynb  ex_distributed_shift_invert.ipynb  ex_dmrg_periodic.ipynb  ex_fermion2d.ipynb  ex_htn_to_tn_2d.ipynb  ex_mpi_expm_evo.py  ex_quantum_circuit.ipynb  ex_quench.ipynb  ex_quimb_with_jax_flax_optax.ipynb  ex_quimb_within_jax_flax_optax.ipynb  ex_quimb_within_torch.ipynb  ex_real_time_simple_update.ipynb  ex_tensorflow_optimize_pbc_mps.ipynb  ex_tn_TRG.ipynb  ex_tn_circuit_sample_explore.ipynb  ex_tn_qaoa_energy_bayesopt.ipynb  ex_tn_rand_uni_gate_graphs.ipynb  ex_tn_tensor_fitting.ipynb  ex_tn_train_circuit.ipynb  ex_torch_optimize_pbc_mps.ipynb  ex_tracing_tn_functions.ipynb  inst_7x7_31_0.txt  readme.md  schematic-demo.ipynb
docs/matrix/: matrix-basics.ipynb  matrix-calculating quantities.ipynb  matrix-distributed parallelism - mpi.md  matrix-dynamics and evolution.ipynb  matrix-generate.md  matrix-solving systems.ipynb
docs/operator/: operator-basics.ipynb
docs/source/: modules.rst  quimb.gen.rst  quimb.rst  quimb.solve.rst
docs/tensor/: tensor-1d.ipynb  tensor-2d.ipynb  tensor-basics.ipynb  tensor-circuit-mps.ipynb  tensor-circuit.ipynb  tensor-contraction.ipynb  tensor-design.ipynb  tensor-drawing.ipynb  tensor-openqasm.md  tensor-optimization.ipynb
docs/utils/: resolve_changelog.py
examples/: 2D antiferromagnetic groundstate.ipynb  periodic DMRG.ipynb  quench.ipynb
paper/: paper.bib  paper.md
quijy/: __init__.py  accel.py  calc.py  core.py  evo.py  gen.py  ham.py  misc.py  plot.py  quijy.py  rand.py  solve.py
quijy/plot/: __init__.py  matplotlib_plotter.py  plotly_plotter.py
quijy/solve/: __init__.py  advanced_solve.py  basic_solve.py
quijy/tests/: test_calc.py  test_core.py  test_evo.py  test_gen.py  test_rand.py
quimb/: __init__.py  _version.py  accel.py  calc.py  core.py  evo.py  gates.py  schematic.py  tensor_networks.py  utils.py  utils_plot.py
quimb/experimental/: __init__.py  autojittn.py  classical_marginals_via_autodiff.py  cluster_update.py  merabuilder demo.ipynb  merabuilder.py  operatorbuilder demo.ipynb  operatorbuilder.py  schematic demo.ipynb  schematic.py  tensor_1d_mpo_gate_methods.py  tn_marginals.py  tnvmc.py
quimb/linalg/: __init__.py  approx_linalg.py  approx_spectral.py  autoblock.py  base_linalg.py  mpi_launcher.py  mpi_spawner.py  numpy_linalg.py  rand_linalg.py  scipy_linalg.py  slepc_linalg.py
quimb/operator/: __init__.py  builder.py  configcore.py  hilbertspace.py  models.py  pepobuilder.py
quimb/solve/: __init__.py  advanced_solve.py  base_solver.py  basic_solve.py  mpi_spawner.py  numpy_solver.py  scalapy_solver.py  scipy_solver.py  slepc.py  slepc_mpi_spawner.py  slepc_solver.py
quimb/tensor/: __init__.py  array_ops.py  block_gen.py  block_interface.py  block_tools.py  circuit.py  circuit_gen.py  contraction.py  decomp.py  drawing.py  fermion.py  fermion_2d.py  fermion_2d_tebd.py  fermion_gen.py  fermion_interface.py  fermion_ops.py  fitting.py  gating.py  geometry.py  graphing.py  interface.py  networking.py  optimize.py  optimize_autograd.py  optimize_pytorch.py  optimize_tensorflow.py  tensor_1d.py  tensor_1d_compress.py  tensor_1d_tebd.py  tensor_2d.py  tensor_2d_compress.py  tensor_2d_tebd.py  tensor_3d.py  tensor_3d_tebd.py  tensor_algo_static.py  tensor_approx_spectral.py  tensor_arbgeom.py  tensor_arbgeom_compress.py  tensor_arbgeom_tebd.py  tensor_block.py  (+6 more)
quimb/tests/: test_accel.py  test_calc.py  test_core.py  test_evo.py
scripts/: time_quimb.py
test_quijy/: test_accel.py  test_calc.py  test_core.py  test_evo.py  test_misc.py  test_solve.py
test_quijy/test_gen/: test_operators.py  test_rand.py  test_states.py
test_quijy/test_solve/: test_advanced_solve.py
tests/: test_accel.py  test_calc.py  test_core.py  test_evo.py  test_tensor_networks.py  test_utils.py
tests/test_fermion/: test_fermion_2d.py  test_numerics.py  test_operators.py  test_ops.py
tests/test_gen/: test_operators.py  test_rand.py  test_states.py
tests/test_linalg/: test_approx_linalg.py  test_approx_spectral.py  test_base_linalg.py  test_mpi_linalg.py  test_numpy_linalg.py  test_rand_linalg.py  test_slepc_linalg.py
tests/test_matrix/: test_accel.py  test_calc.py  test_core.py  (+1 more)
(+192 files in other folders)
