[project]
name = "quimb"
description = "Quantum information and many-body library."
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = ["version"]
authors = [{ name = "Johnnie Gray", email = "johnniemcgray@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "quantum",
    "physics",
    "tensor",
    "networks",
    "tensors",
    "dmrg",
    "tebd",
    "mera",
    "peps",
]
requires-python = ">=3.10"
dependencies = [
    "autoray>=0.8.3",
    "cotengra>=0.7.1",
    "cytoolz>=0.8.0",
    "numba>=0.39",
    "numpy>=1.17",
    "psutil>=4.3.1",
    "scipy>=1.0.0",
    "tqdm>=4",
]


[project.optional-dependencies]
recommended = [
    "autograd",
    "cmaes",
    "cotengrust",
    "kahypar",
    "matplotlib",
    "networkx",
    "plotly",
    "pygraphviz",
]
tensor = [
    "matplotlib>=2.0",
    "networkx>=2.3"
]
advanced_solvers = [
    "mpi4py",
    "petsc4py",
    "slepc4py"
]
tests = [
    "coverage",
    "pytest",
    "pytest-cov"
]
docs = [
    "astroid<3.0.0",
    "doc2dash>=2.4.1",
    "furo",
    "ipython!=8.7.0",
    "myst-nb",
    "setuptools_scm",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx>=2.0",
]

[project.urls]
"Documentation" = "https://quimb.readthedocs.io/"
"Repository" = "https://github.com/jcmgray/quimb/"
"Issues" = "https://github.com/jcmgray/quimb/issues"
"Changelog" = "https://quimb.readthedocs.io/en/latest/changelog.html"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "quimb/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["once"]

[tool.coverage.run]
omit = ["*/quimb/experimental/*"]
source = ["quimb"]

[tool.pylama]
ignore = "C901"
max_line_length = 79

[tool.ruff]
line-length = 79
target-version = "py310"
lint.ignore = ["E741"]

[tool.black]
line-length = 79
target-version = ['py310']
