[project]
name = "quimb"
description = "Quantum information and many-body library."
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = ["version"]
authors = [{ name = "Johnnie Gray", email = "johnniemcgray@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = [
    "quantum",
    "physics",
    "tensor",
    "networks",
    "tensors",
    "dmrg",
    "tebd",
    "mera",
    "peps",
]
requires-python = ">=3.11"
dependencies = [
    "autoray>=0.8",
    "cotengra>=0.7.1",
    "cytoolz>=0.8.0",
    "numba>=0.39",
    "numpy>=1.17",
    "psutil>=4.3.1",
    "scipy>=1.16.0",
    "tqdm>=4",
]

[project.optional-dependencies]
recommended = [
    "autograd",
    "cmaes",
    "cotengrust",
    "kahypar",
    "matplotlib",
    "networkx",
    "plotly",
    "pygraphviz",
]
advanced_solvers = [
    "mpi4py",
    "petsc4py",
    "slepc4py"
]
tests = [
    "coverage",
    "pytest",
    "pytest-cov"
]
docs = [
    "astroid",
    "doc2dash>=2.4.1",
    "furo",
    "ipython!=8.7.0",
    "myst-nb",
    "setuptools_scm",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx>=2.0",
]

[project.urls]
"Documentation" = "https://quimb.readthedocs.io/"
"Repository" = "https://github.com/jcmgray/quimb/"
"Issues" = "https://github.com/jcmgray/quimb/issues"
"Changelog" = "https://quimb.readthedocs.io/en/latest/changelog.html"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "quimb/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["once"]

[tool.coverage.run]
omit = ["*/quimb/experimental/*"]
source = ["quimb"]

[tool.pylama]
ignore = "C901"
max_line_length = 79

[tool.ruff]
line-length = 79
target-version = "py311"
lint.ignore = ["E741"]

[tool.black]
line-length = 79
target-version = ['py311']


# ---------------------------------- pixi ----------------------------------- #

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
autoray = "*"
cotengra = "*"
cytoolz = "*"
numba = "*"
numpy = "*"
psutil = "*"
scipy = ">=1.16.0"
tqdm = "*"

[tool.pixi.pypi-dependencies]
quimb = { path = ".", editable = true }

[tool.pixi.feature.full.dependencies]
autograd= "*"
cmaes= "*"
graphviz = "*"
matplotlib= "*"
networkx= "*"
plotly= "*"
pygraphviz= "*"
[tool.pixi.feature.full.pypi-dependencies]
cotengrust= "*"
[tool.pixi.feature.full.target.linux-64.pypi-dependencies]
kahypar = "*"
[tool.pixi.feature.full.target.osx-arm64.pypi-dependencies]
kahypar = "*"

[tool.pixi.feature.slepc]
platforms = ["linux-64"]
[tool.pixi.feature.slepc.dependencies]
matplotlib = "*"
mpi4py = "*"
networkx = "*"
openmpi = "*"
petsc = { version = "*", build = "complex*" }
petsc4py = "*"
slepc = { version = "*", build = "complex*" }
slepc4py = "*"

[tool.pixi.feature.jax]
platforms = ["linux-64"]
[tool.pixi.feature.jax.pypi-dependencies]
jax = { version = "*", extras = ["cpu"] }

[tool.pixi.feature.torch]
platforms = ["linux-64"]
[tool.pixi.feature.torch.pypi-dependencies]
torch = { version = "*", index = "https://download.pytorch.org/whl/cpu" }

[tool.pixi.feature.tensorflow]
platforms = ["linux-64"]
[tool.pixi.feature.tensorflow.pypi-dependencies]
tensorflow = "*"

[tool.pixi.feature.tests.dependencies]
coverage= "*"
pytest= "*"
pytest-cov= "*"

[tool.pixi.feature.docs.dependencies]
astroid = "*"
doc2dash = "*"
furo = "*"
ipython = "*"
myst-nb = "*"
ruff = "*"
setuptools_scm = "*"
sphinx-autoapi = "*"
sphinx-copybutton = "*"
sphinx-design = "*"
sphinx = "*"

[tool.pixi.feature.pyold.dependencies]
python= "3.11.*"

[tool.pixi.feature.pymid.dependencies]
python= "3.13.*"

[tool.pixi.feature.pynew.dependencies]
python= "3.14.*"

[tool.pixi.environments]
testpynew = { features = ["pynew", "full", "tests"] }
testpyold = { features = ["pyold", "full", "tests"] }
testpymid = { features = ["pymid", "full", "tests"] }
testjax = { features = ["pymid", "full", "jax", "tests"] }
testtorch = { features = ["pymid", "full", "torch", "tests"] }
testtensorflow = { features = ["pymid", "full", "tensorflow", "tests"] }
testslepc = { features = ["pynew", "slepc", "tests"] }
docs = { features = ["pynew", "docs"] }

[tool.pixi.tasks]
testmatrix = { cmd = "pytest tests/ --cov=quimb --cov-report=xml --ignore=tests/test_tensor", cwd = "." }
testtensor = { cmd = "pytest tests/test_tensor --cov=quimb --cov-report=xml", cwd = "." }

[tool.pixi.feature.docs.tasks]
docs = { cmd = "sphinx-build -b html docs docs/_build/html", cwd = "." }
docs-clean = { cmd = "rm -rf docs/_build", cwd = "." }
docs-serve = { cmd = "python -m http.server -d docs/_build/html 8000", cwd = "." }
lint = { cmd = "ruff check --select I; ruff format --check", cwd = "." }
format = { cmd = "ruff check --select I --fix; ruff format", cwd = "." }
